--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "shoelace-css": "^1.0.0-beta13",
+    "underscore": "^1.8.3"
   }
 }
