updating title to React Playground

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SWE",
-  "name": "Star Wars Encyclopedia",
+  "short_name": "React Playground",
+  "name": "React Playground",
   // "icons": [
   //   {
   //     "src": "favicon.ico",
